Reduce unhelpful verbose log output, and slight code cleanup